# simple-mpc

./: .clang-format  .gersemirc  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  dependencies.cmake  devel-git-deps.yaml  environment-devel.yaml  package.xml  pixi.toml
.github/workflows/: macos-linux-pixi.yml
benchmark/: CMakeLists.txt  talos.cpp
bindings/: CMakeLists.txt  expose-centroidal.cpp  expose-fulldynamics.cpp  expose-kinodynamics.cpp  expose-lowlevel.cpp  expose-mpc.cpp  expose-problem.cpp  expose-robot-handler.cpp  main.cpp  module.cpp  problems.hpp  robot-handler.cpp
bindings/simple_mpc/: __init__.py
cmake/: .cmake-format.py  GNUInstallDirs.cmake
cmake/boost/: FindBoost.cmake
cmake/cython/python/: FindPython.cmake  FindPython2.cmake  FindPython3.cmake
cmake/cython/python/FindPython/: Support.cmake
examples/: bullet_robot.py  go2_centroidal.py  go2_fulldynamics.py  go2_jump.py  go2_kinodynamics.py  plot.py  robot.py  talos_centroidal.py  talos_fulldynamics.py  talos_kinodynamics.py  talos_test.py  utils.py
include/simple-mpc/: base-problem.hpp  centroidal-dynamics.hpp  foot-trajectory.hpp  fulldynamics.hpp  fwd.hpp  kinodynamics.hpp  lowlevel-control.hpp  math-util.hpp  model-utils.hpp  mpc.hpp  ocp-handler.hpp  python.hpp  robot-handler.hpp  settings.hpp
include/simple-mpc/python/: py-ocp-handler.hpp
src/: base-problem.cpp  centroidal-dynamics.cpp  foot-trajectory.cpp  fulldynamics.cpp  kinodynamics.cpp  lowlevel-control.cpp  model-utils.cpp  mpc.cpp  ocp-handler.cpp  robot-handler.cpp
tests/: CMakeLists.txt  lowlevel.cpp  mpc.cpp  problem.cpp  robot_handler.cpp  test_utils.cpp
